--- a/Home.css
+++ b/Home.css
@@ -14,6 +14,7 @@ body,html{
 
 /* Hompage Banner*/
 .Banner{
+    background-color: black;
     background-image: url("Capture.PNG");
     height: 50%;
     background-position: center;
