--- a/Home.css
+++ b/Home.css
@@ -15,7 +15,7 @@ body,html{
 /* Hompage Banner*/
 .Banner{
      background-image: url("Capture.PNG");
-    background-color: black;
+    background-color: #ddd;
    
     height: 50%;
     background-position: center;
