--- a/about.css
+++ b/about.css
@@ -14,11 +14,12 @@ body,html{
 }
 .Banner{
     height: 50%;
-    background-image: url("I:/Business/Deiva Trader/Capture1.PNG");
+    background-image: url("Capture1.PNG");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    background-color: #ddd;
 }
 
 p{
