--- a/about.css
+++ b/about.css
@@ -14,6 +14,7 @@ body,html{
 }
 .Banner{
     height: 50%;
+    background-color:#ddd;
     background-image: url("Capture1.PNG");
     background-position: center;
     background-repeat: no-repeat;
