--- a/Home.css
+++ b/Home.css
@@ -14,7 +14,7 @@ body,html{
 
 /* Hompage Banner*/
 .Banner{
-     background-image: url("Capture1.PNG");
+     background-image: url("Capture.PNG");
    
    
     height: 50%;
